# datalogger-fes-23

./: .replit  README.md  app.py  app_default.py  database.py  grafico.py  hola.py  mqtt_proba.py  numero_a_actual.py  pendents.txt  pyproject.toml  replit.nix  requirements.txt  temps.py
templates/: application_form.html  application_submitted.html  banner.html  bootstrap.html  dada_actual.html  dataloggator.html  footer.html  grafico.html  grafico2.html  grafico3.html  grafico4.html  home.html  icon.html  jobitem.html  jobpage.html  nav.html  proba.html  register.html  sign-in.html
