[tool.poetry]
name = "repl_nix_jovian-career-copy"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
SQLAlchemy = "^2.0.4"
paho-mqtt = "^1.6.1"
pyecharts = "^2.0.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
plotly = "5.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
